--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -15,7 +15,7 @@ body {
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #3333999c, #ff00cc4b), url("/img/libre.jpg");
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #3333999c, #ff00cc4b), url("/img/libre.jpg");
+    background: linear-gradient(to right, #3333999c, #ff00cc4b), url(../../img/libre.jpg);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
@@ -232,7 +232,7 @@ header.abajo .logo {
 }
 
 .comenzar2{
-    font-size: 25px;
+    font-size: 30px;
     border: 0;
     background-image: linear-gradient(150deg,
             #3333999c,
