--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
     font-family: 'Golos Text', sans-serif;
@@ -145,7 +141,6 @@ header.abajo .logo {
     justify-content: space-around;
     text-align: center;
     color: #757575;
-    padding: 5em;
 }
 
 .resumen h3 {
@@ -232,18 +227,17 @@ header.abajo .logo {
 }
 
 .comenzar2{
-    font-size: 30px;
+    font-size: 25px;
     border: 0;
     background-image: linear-gradient(150deg,
             #3333999c,
             #e80ce8);
     border-radius: 8px;
     color: #fff;
-    display: flex;
     padding: 4px;
     cursor: pointer;
     transition: .3s;
-
+    margin-top: 10px;
 }
 
 .campo, textarea{
@@ -297,7 +291,8 @@ header.abajo .logo {
 .servicios2 {
 
     background: #0d1117;
-    height: 2965px;
+    /*height: 2965px;*/
+    padding-bottom: 40px;
 }
 
 .servicios2 h1 {
@@ -419,7 +414,6 @@ header.abajo .logo {
     justify-content: space-around;
     height: 600px;
     margin: 0;
-    padding: 5em;
     box-sizing: border-box;
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
@@ -492,7 +486,7 @@ header.abajo .logo {
 }
 
 .slider{
-    width: 80vw;
+    /*width: 80vw;*/
     height: auto;
     margin: auto;
     overflow: hidden;
@@ -514,6 +508,10 @@ header.abajo .logo {
     width: 100%;
 }
 
+.img_bloc001_1{
+    display: none;
+}
+
 @keyframes scroll{
     0%{
         -webkit-transform:translateX(0);
@@ -525,3 +523,71 @@ header.abajo .logo {
     }
 }
 
+/*medias*/
+
+@media (width <=1024px) {
+    .comenzar2{
+        font-size: 20px;
+    }
+    .textoswe h1 {
+        font-size: 40px !important;
+    }
+    .textoswe h2 {
+        font-size: 30px !important;
+    }
+    .tecnologias h1{
+        font-size: 40px !important;
+        text-align: center !important;
+    }
+}
+
+@media (width <=991px) {
+    .comenzar2{
+        font-size: 20px;
+    }
+    .textoswe h1 {
+        font-size: 25px !important;
+    }
+    .textoswe h2 {
+        font-size: 20px !important;
+    }
+    .tecnologias h1{
+        font-size: 30px !important;
+        text-align: center !important;
+    }
+}
+
+@media (width <=767px) {
+    .textoswe{
+        text-align: center;
+    }
+    .textoswe h1 {
+        font-size: 30px !important;
+    }
+    .textoswe h2 {
+        font-size: 25px !important;
+    }
+    .comenzar{
+        display: inline-flex !important;
+        margin-bottom: 30px;
+    }
+    .resumen{
+        text-align: justify;
+    }
+
+    .img_bloc001_1{
+        display: block;
+    }
+    .img_bloc001{
+        display: none;
+    }
+
+    .logo{
+        font-size: 15px !important;
+    }
+    
+}
+
+
+
+/*.textoswe h1 {
