--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -585,6 +585,17 @@ header.abajo .logo {
     .logo{
         font-size: 15px !important;
     }
+
+    .cuatrocuatro {
+        text-align: center !important;
+    }
+    .form h2{
+        text-align: center !important;
+    }
+
+    .comencemos{
+        height: auto !important;
+    }
     
 }
 
